<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_Complaint"
            android:icon="@drawable/compmenu"
            android:title="@string/Complaint" />
        <item
            android:id="@+id/nav_Services"
            android:icon="@drawable/servicesmenu"
            android:title="@string/services" />
        <item
            android:id="@+id/nav_parkassist"
            android:icon="@drawable/parkmenu"
            android:title="@string/parkassist" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/login"
                    android:title="@string/Login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>


    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rateus"
                android:title="@string/RateUs" />

        </menu>
    </item>
</menu>